--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.example</groupId>
+  <groupId>com.andela</groupId>
   <artifactId>british-spoken-time</artifactId>
   <version>1.0.0</version>
   <name>British Spoken Time</name>
@@ -41,7 +41,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.1.0</version>
         <configuration>
-          <mainClass>com.example.britishtime.BritishSpokenTimeApplication</mainClass>
+          <mainClass>com.andela.britishtime.app.BritishSpokenTimeApplication</mainClass>
         </configuration>
       </plugin>
     </plugins>
